# Control-Systems-Algorithms

./: .gitignore  README.md
control_algorithms/: Cargo.toml
control_algorithms/linear_algebra/: Cargo.toml
control_algorithms/linear_algebra/src/: lib.rs
control_algorithms/linear_algebra/src/vec/: mod.rs  vec3D.rs
control_algorithms/linear_algebra/src/vec/tests/: mod.rs  vec3D_tests.rs
control_algorithms/src/: lib.rs
control_algorithms/src/control_systems/: mod.rs
control_algorithms/src/control_systems/linear_feedback/: mod.rs
control_algorithms/src/controllers/: linear_feedback.rs  mod.rs  void_control.rs
control_algorithms/src/linear_algebra/: mod.rs  vec3D.rs
control_algorithms/src/linear_algebra/tests/: vec3D_tests.rs
control_algorithms/src/linear_feedback/: mod.rs
control_algorithms/src/plants/: chua_circuit.rs  lorenz_attractor.rs  mod.rs  pendulum.rs  van_der_pol_oscillator.rs
control_algorithms/src/systems/: autonomous_regularizer.rs  mod.rs
render/: main.py  pendulum.py  variable_plots.py
